# HydraImageConverter

./: .gitignore  01_env.sh  02_build.sh  02_build_c++_release.sh  03_tests_c++.sh  04_build_python_binding.sh  05_build_python_binding.sh  CMakeLists.txt  HydraImageConverter.sln  HydraImageConverter.vcxproj  HydraImageConverter.vcxproj.filters  LICENSE  README.md  build_c++_debug.sh  image_loader.cpp  image_loader.h  image_loader_bindings.cpp  main.cpp  pyproject.toml  run_test_binding.sh  test_binding.py
Textures/: 01.image4f  03.image4f  kitchen.image4f  kitchen_bad.image4f  mytex.exr  sun_moon.image4ub
