[tool.poetry]
name = "Hydra Image Converter"
version = "0.1.0"
description = "Hydra image converter"
authors = ["Trofimov Max <trofimovmax@mail.ru>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<3.11.0"
pybind11 = "^2.13.6"
psutil = "^7.0.0"


[tool.poetry.group.dev.dependencies]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

